# drc_hubo

gazebo_model/DRC_HOUSE1/: DRC_HOUSE1.sdf  model.config  model.config~
gazebo_model/DRC_head/: DRC_head.sdf  model.config  model.config~
gazebo_model/DRC_head_kinect/: DRC_head_kinect.sdf  DRC_head_kinect.sdf~  model.config  model.sdf~
gazebo_model/DRC_hubo/: DRC_hubo.sdf  model.config  model.config~
gazebo_model/DRC_hubo/backup/: DRCHUBO_0922.sdf
gazebo_model/DRC_hubo/meshes/: Body_Head.STL  Body_Hokuyo.STL  Body_LAFT_col.STL  Body_LF2_b2.STL  Body_LHR.STL  Body_LWP.STL  Body_LWY_col.STL  Body_RAFT.STL  Body_RAR_NEW.STL  Body_REB.STL  Body_REB_col.STL  Body_RF1_col.STL  Body_RF2_b3_col.STL  Body_RF2_c1_col.STL  Body_RF2_c2_col.STL  Body_RHY_col.STL  Body_RKN_col.STL  Body_RSR_col.STL  Body_RWFT_col.STL  Body_RWP.STL  Body_RWY.STL  Body_TORSO.STL  Body_WST_col.STL
gazebo_model/DRC_hubo/meshes_old/: Body_LAP.STL  Body_LAR_col.STL  Body_LEB.STL  Body_LEB_col.STL  Body_LF2_a2.STL  Body_LF2_a3.STL  Body_LF2_b2.STL  Body_LF2_c2.STL  Body_LF2_c3.STL  Body_LHP.STL  Body_LHR.STL  Body_LHR_col.STL  Body_LHY.STL  Body_LKN.STL  Body_LSP.STL  Body_LSR.STL  Body_LSY.STL  Body_LWFT_col.STL  Body_LWP.STL  Body_LWY.STL  Body_RAFT_col.STL  Body_RAP.STL  Body_RAP_col.STL  Body_REB.STL  Body_RF2_a1.STL  Body_RF2_b1.STL  Body_RF2_c1.STL  Body_RF2_c2.STL  Body_RHP.STL  Body_RHP_col.STL  Body_RHR.STL  Body_RHY.STL  Body_RKN.STL  Body_RSP.STL  Body_RSR.STL  Body_RSY.STL  Body_RSY_col.STL  Body_RWFT.STL  Body_RWH_col.STL  Body_RWP.STL  (+3 more)
gazebo_model/DRC_hubo/meshes_old2/: Body_LAFT.STL  Body_LAFT_col.STL  Body_LAP.STL  Body_LAP_col.STL  Body_LAR.STL  Body_LEB.STL  Body_LF1.STL  Body_LF1_col.STL  Body_LF2_a1.STL  Body_LF2_a1_col.STL  Body_LF2_b1.STL  Body_LF2_b3.STL  Body_LFWH.STL  Body_LFWH_col.STL  Body_LHP.STL  Body_LHP_col.STL  Body_LHR.STL  Body_LHY.STL  Body_LHY_col.STL  Body_LKN.STL  Body_LKN_col.STL  Body_LSR.STL  Body_LSY.STL  Body_LWH_col.STL  Body_LWP.STL  Body_LWY.STL  Body_RAFT.STL  Body_RAFT_col.STL  Body_RAP.STL  Body_RAR.STL  Body_REB.STL  Body_RF1.STL  Body_RF2_a2.STL  Body_RF2_a2_col.STL  Body_RF2_b2.STL  Body_RF2_b3.STL  Body_RF2_c3.STL  Body_RHP.STL  Body_RHR.STL  Body_RHR_col.STL  (+11 more)
gazebo_model/DRC_hubo/ref/: DRCHUBO _backup.sdf  DRCHUBO _partial.sdf  Full_body_final.URDF  Lower_body1.URDF  Lower_body2_Left.SLDASM.URDF  Lower_body2_Right.SLDASM.URDF  UpperBody_URDF.URDF
podo/ALBuild/: Makefile
podo/ALBuild/ALTutorial/: ALTutorial  Makefile
podo/ALBuild/DemoFireAL/: Makefile
podo/ALBuild/OmniWheel/: Makefile
podo/ALBuild/PODOLAN/: Makefile  PODOLAN  moc_CoreThread.cpp  moc_PODOServer.cpp  moc_RBTCPClient.cpp  moc_RBTCPServer.cpp  moc_ROSThread.cpp
podo/ALPrograms/: ALPrograms.pro  ALPrograms.pro.user.e63624c
podo/Execute Daemon/: Core_Config.db  Daemon  PODOLauncher
podo/PODOGUI/: CommonHeader.h  GUIMainWindow.cpp  GUIMainWindow.h  GUIMainWindow.ui  PODOGUI.pro  PODOGUI.pro.user.2a4b42d.3.3-pre1  PODOGUI.pro.user.e63624c  TutorialDialog.cpp  TutorialDialog.h  TutorialDialog.ui  main.cpp
podo/PODOGUIBuild/: Makefile  PODOGUI  moc_GUIMainWindow.cpp  moc_JointDialog.cpp  moc_LANDialog.cpp  moc_ModelDialog.cpp  moc_PODOALDialog.cpp  moc_RBTCPClient.cpp  moc_RBTCPServer.cpp  moc_SensorDialog.cpp  moc_SettingDialog.cpp  moc_TutorialDialog.cpp  moc_omniwheeldialog.cpp  moc_walkingdialog.cpp  ui_GUIMainWindow.h  ui_JointDialog.h  ui_LANDialog.h  ui_ModelDialog.h  ui_PODOALDialog.h  ui_SensorDialog.h  ui_SettingDialog.h  ui_TutorialDialog.h  ui_omniwheeldialog.h  ui_walkingdialog.h
podo/SHARE/: Friction.txt~  Friction_DRC1.txt~  IPADDR.txt~  ProcessName.txt~
ros/drc_gui/: CMakeLists.txt  CMakeLists.txt~  mainpage.dox  package.xml  package.xml~
ros/drc_gui/include/drc_gui/: main_window.hpp  qnode.hpp
ros/drc_gui/launch/: drc_gui.launch  drc_gui.launch~
ros/drc_gui/msg/: SendPos.msg  Send_pos.msg~
ros/drc_gui/src/: main.cpp  main_window.cpp  qnode.cpp
ros/drc_gui/ui/: main_window.ui
ros/drc_hubo/: CMakeLists.txt  CMakeLists.txt~  package.xml
ros/drc_navi/: CMakeLists.txt  package.xml  package.xml~
ros/drc_navi/launch/: amcl_diff.launch  amcl_diff.launch~  drc_navi.launch~  navi.launch
ros/drc_navi/maps/: map.pgm  map.yaml  map.yaml~
ros/drc_navi/param/: amcl_diff.launch~  base_local_planner_params.yaml  costmap_common_params.yaml  costmap_common_params.yaml~  global_costmap_params.yaml  global_costmap_params.yaml~  local_costmap_params.yaml  local_costmap_params.yaml~  move_base_3.launch~  move_base_params.yaml  move_base_params.yaml~
ros/drc_navi/rviz/: navi.rviz
ros/drc_plugin/: CMakeLists.txt  CMakeLists.txt.user.60c5067  CMakeLists.txt~  package.xml  package.xml~
ros/drc_plugin/launch/: drc_plugin.launch~
ros/drc_plugin/meshes/: Body_Head.dae  Body_Hokuyo.dae  Body_LAFT.STL  Body_LAR.STL  Body_LAR_NEW.STL  Body_LF1.STL  Body_LF2_a2.STL  Body_LFWHEEL.STL  Body_LSP.STL  Body_LSP_col.STL  Body_LSR.STL  Body_LSR_col.STL  Body_LSY_col.STL  Body_LWFT.STL  Body_LWH.STL  Body_LWP_col.STL  Body_RAR.STL  Body_RAR_col.STL  Body_RF2_b1.STL  Body_RF2_c2.STL  Body_RF2_c3_col.STL  Body_RF2_c_col.STL  Body_RFUNI.STL  Body_RFWH.STL  Body_RHP.STL  Body_RHY.STL  Body_RKN.STL  Body_RSP.STL  Body_RSP_col.STL  Body_RSY.STL  Body_RWH.STL  Body_WST.STL
ros/drc_plugin/msg/: DRC_HEAD_CMD.msg~
ros/drc_plugin/rviz/: drc.rviz
ros/drc_plugin/src/: GazeboLANData.h  drc_plugin.cpp  drc_plugin.cpp~  drc_plugin.h  head_plugin.cpp  head_plugin.h
ros/drc_plugin/src/backup/: drc_plugin.cpp  drc_plugin.h
ros/drc_plugin/urdf/: DRC_HEAD.urdf  DRC_HUBO.urdf  DRC_HUBO.urdf~
ros/drc_plugin/world/: DRC_HUBO.world  DRC_HUBO.world~
ros/drc_podo_connector/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
ros/drc_podo_connector/launch/: drc_hubo.launch  drc_hubo.launch~
ros/drc_podo_connector/msg/: DRC_HEAD_CMD.msg
ros/drc_podo_connector/src/: JointInformation.h  ROSLANData.h  podo_connector.cpp  podo_connector.cpp~
ros/drc_slam/: CMakeLists.txt  package.xml  package.xml~
ros/settings/: gain.txt  network.txt  network.txt~
(+251 files in other folders)
