<?xml version="1.0"?>
<package>
  <name>drc_gui</name>
  <version>0.1.0</version>
  <description>

     drc_gui

  </description>
  <maintainer email="gazebo@gmail.com">gazebo</maintainer>
  <author>gazebo</author>
  <license>BSD</license>
  <!-- <url type="bugtracker">https://github.com/stonier/qt_ros/issues</url> -->
  <!-- <url type="repository">https://github.com/stonier/qt_ros</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>
  <build_depend>move_base_msgs</build_depend>
  <run_depend>move_base_msgs</run_depend>
  <build_depend>actionlib</build_depend>
  <run_depend>actionlib</run_depend>

 
</package>
