<?xml version="1.0"?>
<package>
  <name>drc_hubo</name>
  <version>0.1.0</version>
  <description>The drc_hubo metapackages</description>

  <maintainer email="jslim@rainbow.re.kr">JeongsooLim</maintainer>
  <maintainer email="seungwoohong@kaist.ac.kr">SeungwooHong</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/drc_hubo</url>
  <author email="jslim@rainbow.re.kr">JeongsooLim</author>
  <author email="seungwoohong@kaist.ac.kr">SeungwooHong</author>


  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>drc_podo_connector</run_depend>
  <run_depend>drc_plugin</run_depend>
  <run_depend>drc_navi</run_depend>
  <run_depend>drc_slam</run_depend>


  <export>
    <metapackage/>
  </export>
</package>
