<?xml version="1.0"?>
<package>
  <name>drc_navi</name>
  <version>0.1.0</version>
  <description>The drc_navi package</description>

  <maintainer email="jslim@rainbow.re.kr">JeongsooLim</maintainer>
  <maintainer email="seungwoohong@kaist.ac.kr">SeungwooHong</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/drc_hubo</url>
  <author email="jslim@rainbow.re.kr">JeongsooLim</author>
  <author email="seungwoohong@kaist.ac.kr">SeungwooHong</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
